style: prevent white spaces wrapping in text-control label

--- a/src/app/features/shared/form-controls/controls/text-control/text-control.component.scss
+++ b/src/app/features/shared/form-controls/controls/text-control/text-control.component.scss
@@ -5,6 +5,7 @@
 
 .form-field {
   $self: &;
+
   margin: 1rem 0;
   padding: 1rem 0 1.5rem;
   position: relative;
@@ -16,6 +17,7 @@
     bottom: calc(100% - 1rem);
     font-size: 0.8em;
     font-weight: 700;
+    white-space: nowrap;
     letter-spacing: 0.2rem;
     color: var(--text-color);
     transition: 0.2s;
